networkpolicy.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-axis-db
#   namespace: app-namespace
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app: axis-service
#     - podSelector:
#         matchLabels:
#           app: db-pod
#   egress:
#   - to:
#     - podSelector:
#         matchLabels:
#           app: axis-service
#     - podSelector:
#         matchLabels:
#           app: db-pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-axis-to-db
  namespace: app-namespace
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: axis-service
